Agregue Colores y Formatos
Agregue Colores y Formatos al Login

--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,9 @@
 <div class="row">
         
         <form>
-		<div class="col-sm-1">
+		<div class="col-sm-2">
 		</div>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
 			<div style="width:100%; text-align:center;">
 		    <img src="img/practifactura.png" width="220px;"/>
 			</div>
@@ -48,8 +48,12 @@
 			<div id="mensaje2"></div>
 			<input id="user" type="hidden" />
 			<input id="pass" type="hidden" />
+						<br/>
+			<br/>
+			<br/>
+		  <div style="color:#FEFFFB; font-size:11px; text-align:center;">Un producto de Practisis S.A. - 2016.</div> 
         </div>
-		<div class="col-sm-1">
+		<div class="col-sm-2">
 		</div>
         </form>
         
