--- a/www/run.html
+++ b/www/run.html
@@ -284,13 +284,65 @@
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Establecimiento</span>
 											<input class="form-control input-lg" type="establecimiento" name="establecimiento" id="establecimiento" placeholder="establecimiento" value="001" required="" autocomplete="off">
 										</div>
+									</div>
+									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Serie</span>
-											<input class="form-control input-lg" type="serie" name="serie" id="serie" placeholder="serie" value="001" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="serie" id="serie" placeholder="serie" value="001" required="" autocomplete="off">
 										</div>
+									</div>
+									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Número Factura</span>
-											<input class="form-control input-lg" type="facturano" name="facturano" id="facturano" placeholder="facturano" value="0" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="facturano" id="facturano" placeholder="facturano" value="0" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Nombre</span>
+											<input class="form-control input-lg" type="text" name="nombre" id="nombre" placeholder="nombre" value="Nombre" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">RUC</span>
+											<input class="form-control input-lg" type="text" name="ruc" id="ruc" placeholder="ruc" value="0000000000000" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Logo</span>
+											<input class="form-control input-lg" type="text" name="logo" id="logo" placeholder="logo" value="image.jpg" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">E-mail</span>
+											<input class="form-control input-lg" type="text" name="email" id="email" placeholder="logo" value="email@empresa.com" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Fecha Contribuyente</span>
+											<input class="form-control input-lg" type="text" name="fecha" id="fecha" placeholder="logo" value="23-01-2016" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Texto Resolucion</span>
+											<input class="form-control input-lg" type="text" name="texto" id="texto" placeholder="texto" value="Texto" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Doc Categorizado</span>
+											<input class="form-control input-sm" type="checkbox" name="documento" id="documento" placeholder="Documento" value="Si" required="" autocomplete="off">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="input-group" style="width: 100%;">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Unificar Dirección</span>
+											<input class="form-control" type="checkbox" name="unifica" id="unifica" placeholder="Unifica " value="Si" required="" autocomplete="off">
 										</div>
 									</div> 															
 								</div>														
