--- a/www/run.html
+++ b/www/run.html
@@ -152,13 +152,13 @@
 											<div id="cuerpo" class="table-responsive">
 													<table id="tablaconsumos" class="table table-bordered table-hover">
 													  <tr id="t1">
-														<td width='10%'><input id="cant1" name="cant1" type="number" onkeyup="if(event.keyCode==188)$(this).val($(this).val().replace(',','.'))" onblur="ingresa(1);" class="form-control" style="height: 25px;"></td>
-														<td width='50%'><input id="prod1" name="prod1" type="text" onblur="ingresa(1);" class="form-control" style="height: 25px;"></td>
+														<td width='10%'><input id="cant1" name="cant1" type="number" step="0.01" onblur="ingresa(1);" class="form-control" style="height: 35px;"></td>
+														<td width='50%'><input id="prod1" name="prod1" type="text" onblur="ingresa(1);" class="form-control" style="height: 35px;"></td>
 														<td width='5%' style="text-align: center;"><input id="iva1" name="iva1" onchange="ingresa(1);" type="checkbox" checked="checked"></td>
-														<td width='15%'><input id="prec1" name="prec1" type="number" onkeyup="if(event.keyCode==188)$(this).val($(this).val().replace(',','.'))" onblur="ingresa(1);" class="form-control" style="height: 25px;text-align: right;"></td>
-														<td style="display:none;"><input id="desc1" name="desc1" type="text" onblur="ingresa(1);" class="form-control" style="height: 25px;text-align: right;"></td>
-														<td style="display:none;"><input id="precn1" name="precn1" type="text" class="form-control" style="height: 25px;text-align: right;" readonly="readonly"></td>
-														<td width='15%'><input id="subt1" name="subt1" type="text" class="form-control" style="height: 25px;text-align: right;" readonly="readonly"></td>
+														<td width='15%'><input id="prec1" name="prec1" type="number" step="0.01"  onblur="ingresa(1);" class="form-control" style="height: 35px;text-align: right;"></td>
+														<td style="display:none;"><input id="desc1" name="desc1" type="text" onblur="ingresa(1);" class="form-control" style="height: 35px;text-align: right;"></td>
+														<td style="display:none;"><input id="precn1" name="precn1" type="text" class="form-control" style="height: 35px;text-align: right;" readonly="readonly"></td>
+														<td width='15%'><input id="subt1" name="subt1" type="text" class="form-control" style="height: 35px;text-align: right;" readonly="readonly"></td>
 														<th width='10%'><i class="fa fa-plus" onclick="agregafila();" id="agregarFila1"></i></th>
 													  </tr>																						  
 													</table>
@@ -300,49 +300,49 @@
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Nombre</span>
-											<input class="form-control input-lg" type="text" name="nombre" id="nombre" placeholder="nombre" value="Nombre" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="nombre" id="nombre" placeholder="Nombre" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">RUC</span>
-											<input class="form-control input-lg" type="text" name="ruc" id="ruc" placeholder="ruc" value="0000000000000" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="ruc" id="ruc" placeholder="0000000000000" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Logo</span>
-											<input class="form-control input-lg" type="text" name="logo" id="logo" placeholder="logo" value="image.jpg" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="logo" id="logo" placeholder="image.jpg" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">E-mail</span>
-											<input class="form-control input-lg" type="text" name="email" id="email" placeholder="logo" value="email@empresa.com" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="email" id="email" placeholder="email@empresa.com" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Fecha Contribuyente</span>
-											<input class="form-control input-lg" type="text" name="fecha" id="fecha" placeholder="logo" value="23-01-2016" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="fecha" id="fecha" placeholder="23-01-2016" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Texto Resolucion</span>
-											<input class="form-control input-lg" type="text" name="texto" id="texto" placeholder="texto" value="Texto" required="" autocomplete="off">
+											<input class="form-control input-lg" type="text" name="texto" id="texto" placeholder="texto" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Doc Categorizado</span>
-											<input class="form-control input-sm" type="checkbox" name="documento" id="documento" placeholder="Documento" value="Si" required="" autocomplete="off">
+											<input class="form-control input-sm" type="text" name="documento" id="documento" placeholder="Documento" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Unificar Dirección</span>
-											<input class="form-control" type="checkbox" name="unifica" id="unifica" placeholder="Unifica " value="Si" required="" autocomplete="off">
+											<input class="form-control" type="checkbox" name="unifica" id="unifica" placeholder="Unifica " value="true" required="" autocomplete="off">
 										</div>
 									</div> 															
 								</div>														
@@ -534,7 +534,7 @@ function verride(que,quien){
 	function agregafila(){  //******************************agrega una fila al grid de consumos ****************************************	
 	var clickID = $("#tablaconsumos tr:last").attr('id').replace('t',''); 
 	var newID = parseInt(clickID)+1;              
-	$('#tablaconsumos tbody').append(' <tr id="t'+newID+'"><td><input id="cant'+newID+'" name="cant'+newID+'" type="number" onkeyup=\'if(event.keyCode==188)$(this).val($(this).val().replace(",","."))\' onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 25px;"></td><td><input id="prod'+newID+'" name="prod'+newID+'" type="text" onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 25px;"></td><td style="text-align: center;"><input id="iva'+newID+'" name="iva'+newID+'" onchange="ingresa('+newID+');" type="checkbox" checked="checked"></td><td><input id="prec'+newID+'" name="prec'+newID+'" type="number" onkeyup=\'if(event.keyCode==188)$(this).val($(this).val().replace(",","."))\' onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 25px;text-align: right;"></td><td style="display:none;"><input id="desc'+newID+'" name="desc'+newID+'" type="text" onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 25px;text-align: right;"></td><td style="display:none;"><input id="precn'+newID+'" name="precn'+newID+'" type="text" class="form-control" style="width: 100%;height: 25px;text-align: right;" readonly="readonly"></td><td><input id="subt'+newID+'" name="subt'+newID+'" type="text" class="form-control" style="width: 100%;height: 25px;text-align: right;" readonly="readonly"></td><td width="10%"><i class="fa fa-minus" onclick="eliminafila('+newID+');" id="agregarFila'+newID+'"></i></td></tr>');					
+	$('#tablaconsumos tbody').append(' <tr id="t'+newID+'"><td><input id="cant'+newID+'" name="cant'+newID+'" type="number" onkeyup=\'if(event.keyCode==188)$(this).val($(this).val().replace(",","."))\' onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 35px;"></td><td><input id="prod'+newID+'" name="prod'+newID+'" type="text" onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 35px;"></td><td style="text-align: center;"><input id="iva'+newID+'" name="iva'+newID+'" onchange="ingresa('+newID+');" type="checkbox" checked="checked"></td><td><input id="prec'+newID+'" name="prec'+newID+'" type="number" onkeyup=\'if(event.keyCode==188)$(this).val($(this).val().replace(",","."))\' onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 35px;text-align: right;"></td><td style="display:none;"><input id="desc'+newID+'" name="desc'+newID+'" type="text" onblur="ingresa('+newID+');" class="form-control" style="width: 100%;height: 35px;text-align: right;"></td><td style="display:none;"><input id="precn'+newID+'" name="precn'+newID+'" type="text" class="form-control" style="width: 100%;height: 35px;text-align: right;" readonly="readonly"></td><td><input id="subt'+newID+'" name="subt'+newID+'" type="text" class="form-control" style="width: 100%;height: 35px;text-align: right;" readonly="readonly"></td><td width="10%"><i class="fa fa-minus" onclick="eliminafila('+newID+');" id="agregarFila'+newID+'"></i></td></tr>');					
 	}
 	
 	function eliminafila(lafila){  //******************************elimina una fila al grid de consumos ****************************************			
