--- a/www/run.html
+++ b/www/run.html
@@ -58,7 +58,7 @@
 
         								<div id="main" Align="center" style="width:100%;  margin-top:10px;">
         									<div class="input-group">
-        										<span class="input-group-addon" id="sizing-addon4" style="width: 25%;"># Cédula</span>
+        										<span class="input-group-addon" id="sizing-addon4" style="width: 85px;"># Cédula</span>
         										<input class="form-control input-md" type="cedula" name="cedula" id="cedula" placeholder="Cédula" required="" autocomplete="off">
         										<div class="input-group-btn">
         											<button type="button" class="btn btn-primary btn-md" onclick="envia('factura'); return false;">Consulta</button>
@@ -88,16 +88,12 @@
         								</div>
 
                                    </div>
-                                </div>
 
-                                <div class="row">
 							        <div class="col-xs-12">
 
                                         <div id="datostotales" style="display: none;">
-  										  <div style=" color:white; text-decoration:none; width:100%; margin-top:10px;!important;">
-                                              <label for="basic-url">Totales</label>
-      									  </div>
-  										  <div class="panel-body">
+                                              <label for="basic-url" style=" color:white; text-decoration:none; width:100%;">Totales</label>
+  										  <div class="panel-body" style="margin-top: -15px;">
   											<div class='row'>
   												<div class='col-ms-3'>
   													<div class="input-group">
@@ -131,7 +127,7 @@
                                 </div>
 							</div>
 
-							<div class="col-sm-5">
+							<div class="col-sm-7">
 
                                 <div id="datosconsumos" style="display: none;">
         							<div style="display: none;">
@@ -139,18 +135,15 @@
         							<textarea id="consumos" name="consumos"></textarea>
         							</div>
         							<div class='row'>
-        								<div class='col-md-9'>
-        								    <div class="panel panel-primary" style="border: 1px solid #337AB7;">
-        										<div class="panel-heading">
-        											<h3 class="panel-title">Factura</h3>
-        										</div>
-        									    <div class="panel-body" style="height: 100%;">
+        								<div class='col-md-9' style="padding-top: 10px;">
+        										<label for="basic-url" style=" color:white; text-decoration:none; width:100%;">Totales</label>
+        									    <div class="panel-body" style="height: 100%;background-color: #FFFFFF;">
         													<table style="width: 100%;">
         														<tr>
         															<td>
-        																<div class="input-group">
-        																	<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Numero de Factura</span>
-        																	<input type="text" name="factura_no" id="factura_no" class="form-control" aria-describedby="sizing-addon4" value="0004587"/>
+        																<div class="input-group" style="width: 100%;">
+        																	<span class="input-group-addon" id="sizing-addon4" style="width: 85px;"># Factura</span>
+        																	<input type="text" name="factura_no" id="factura_no" class="form-control input-md" aria-describedby="sizing-addon4" value="0004587"/>
         																</div>
         															</td>
         														</tr>
@@ -159,8 +152,8 @@
         													<table id="detallefactura" class="table table-bordered table-hover">
         														<tr>
         														<th width='10%'>Cant.</th>
-        														<th width='50%'>Producto</th>
-        														<th width='5%'>Iva</th>
+        														<th width='40%'>Producto</th>
+        														<th width='10%'>Iva</th>
         														<th width='15%'>Precio</th>
         														<th  style="display:none;">Des. %</th>
         														<th  style="display:none;">Precio Neto</th>
@@ -172,40 +165,32 @@
         											<div id="cuerpo" class="table-responsive">
         													<table id="tablaconsumos" class="table table-bordered table-hover">
         													  <tr id="t1">
-        														<td width='10%'><input id="cant1" name="cant1" type="number" step="0.01" onblur="ingresa(1);" class="form-control" style="height: 35px;"></td>
-        														<td width='50%'><input id="prod1" name="prod1" type="text" onblur="ingresa(1);" class="form-control" style="height: 35px;"></td>
-        														<td width='5%' style="text-align: center;"><input id="iva1" name="iva1" onchange="ingresa(1);" type="checkbox" checked="checked"></td>
-        														<td width='15%'><input id="prec1" name="prec1" type="number" step="0.01"  onblur="ingresa(1);" class="form-control" style="height: 35px;text-align: right;"></td>
-        														<td style="display:none;"><input id="desc1" name="desc1" type="text" onblur="ingresa(1);" class="form-control" style="height: 35px;text-align: right;"></td>
-        														<td style="display:none;"><input id="precn1" name="precn1" type="text" class="form-control" style="height: 35px;text-align: right;" readonly="readonly"></td>
-        														<td width='15%'><input id="subt1" name="subt1" type="text" class="form-control" style="height: 35px;text-align: right;" readonly="readonly"></td>
+        														<td width='10%'><input id="cant1" name="cant1" type="number" step="0.01" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;"></td>
+        														<td width='40%'><input id="prod1" name="prod1" type="text" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;"></td>
+        														<td width='10%' style="text-align: center;"><input id="iva1" name="iva1" onchange="ingresa(1);" type="checkbox" checked="checked"></td>
+        														<td width='15%'><input id="prec1" name="prec1" type="number" step="0.01"  onblur="ingresa(1);" class="form-control input-md" style="height: 35px;text-align: right;"></td>
+        														<td style="display:none;"><input id="desc1" name="desc1" type="text" onblur="ingresa(1);" class="form-control input-md" style="height: 35px;text-align: right;"></td>
+        														<td style="display:none;"><input id="precn1" name="precn1" type="text" class="form-control input-md" style="height: 35px;text-align: right;" readonly="readonly"></td>
+        														<td width='15%'><input id="subt1" name="subt1" type="text" class="form-control input-md" style="height: 35px;text-align: right;" readonly="readonly"></td>
         														<th width='10%'><i class="fa fa-plus" onclick="agregafila();" id="agregarFila1"></i></th>
         													  </tr>
         													</table>
         											</div>
         									    </div>
-        								    </div>
         								</div>
         							</div>
-        								<div class='row'>
-        									<div class="col-md-4" >
-        									</div>
-        									<div class='col-md-4'>
-
-        										<p style="text-align: right"><input type="button" name="pagar" id="pagar" onclick="validar();" class="btn btn-info" value="Facturar"></p>
-        									  </div>
-        								</div>
+                                    <br>
+      								<div class='row'>
+      									<div class="col-md-4" >
+      									</div>
+      									<div class='col-md-4'>
+      										<p style="text-align: right"><input type="button" name="pagar" id="pagar" onclick="validar();" class="btn btn-info" value="Facturar"></p>
+      									</div>
+      								</div>
         						</div>
 
 							</div>
 
-							<div class="col-md-3" >
-							</div>
-							<div class="col-md-6">
-
-							</div>
-							<div class="col-md-3" >
-							</div>
 						</div>
 
 						
@@ -388,7 +373,7 @@ function envia(donde){
 				  .done(function( msg ) {
 					if (msg=="no"){
 						//$('#datos').html('<div class="form-group"><input class="form-control input-lg" type="nombre" name="nombre" id="nombre" placeholder="Nombre" required="" autocomplete="off"><input class="form-control input-lg" type="apellido" name="apellido" id="apellido" placeholder="Apellido" required="" autocomplete="off"><input class="form-control input-lg" type="email" name="email" id="email" placeholder="E-mail" required="" autocomplete="off" ><input class="form-control input-lg" type="telefono" name="telefono" id="telefono" placeholder="Teléfono" required="" autocomplete="off"></div> ');						
-						$('#datos').html('<div class="form-group"><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 25%;">Nombre</span><input class="form-control input-md" type="nombre" name="nombre" id="nombre" placeholder="Nombre" required="" autocomplete="off"></div><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 25%;">Dirección</span><input class="form-control input-md" type="apellido" name="apellido" id="apellido" placeholder="Dirección" required="" autocomplete="off"></div><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 25%;">E-mail</span><input class="form-control input-md" type="email" name="email" id="email" placeholder="E-mail" required="" autocomplete="off"></div><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 25%;">Teléfono</span><input class="form-control input-md" type="telefono" name="telefono" id="telefono" placeholder="Teléfono" required="" autocomplete="off"></div></div> ');
+						$('#datos').html('<div class="form-group"><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 85px;">Nombre</span><input class="form-control input-md" type="nombre" name="nombre" id="nombre" placeholder="Nombre" required="" autocomplete="off"></div><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 85px;">Dirección</span><input class="form-control input-md" type="apellido" name="apellido" id="apellido" placeholder="Dirección" required="" autocomplete="off"></div><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 85px;">E-mail</span><input class="form-control input-md" type="email" name="email" id="email" placeholder="E-mail" required="" autocomplete="off"></div><div class="input-group" style="width: 100%;"><span class="input-group-addon" id="sizing-addon4" style="width: 85px;">Teléfono</span><input class="form-control input-md" type="telefono" name="telefono" id="telefono" placeholder="Teléfono" required="" autocomplete="off"></div></div> ');
 						$("#maincontinuar").show();
 						$("#btningresadatosc").html("Grabar");
 						$("#lbldatosfactura").show();
