--- a/www/run.html
+++ b/www/run.html
@@ -82,7 +82,7 @@
         									</div>
         									<div id="maincontinuar" Align="center" style="width:100%; display:none;">
         										<div class="form-group">
-        											<button type="button" class="btn btn-success btn-md" id="btningresadatosc" onclick="ingresadatos(); return false;">Grabar</button>
+        											<button type="button" class="btn btn-success btn-lg" id="btningresadatosc" onclick="ingresadatos(); return false;">Grabar</button>
         										</div>
         									</div>
         								</div>
@@ -184,7 +184,7 @@
       									<div class="col-md-4" >
       									</div>
       									<div class='col-md-4'>
-      										<p style="text-align: right"><input type="button" name="pagar" id="pagar" onclick="validar();" class="btn btn-info" value="Facturar"></p>
+      										<p style="text-align: right"><input type="button" name="pagar" id="pagar" onclick="validar();" class="btn btn-info btn-lg" value="Facturar"></p>
       									</div>
       								</div>
         						</div>
@@ -266,74 +266,74 @@
 								<div id="datosfacturaconfi" Align="center" style="width:100%; display:block;"> 
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Establecimiento</span>
-											<input class="form-control input-lg" type="establecimiento" name="establecimiento" id="establecimiento" placeholder="establecimiento" value="001" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Establecimiento</span>
+											<input class="form-control" type="establecimiento" name="establecimiento" id="establecimiento" placeholder="establecimiento" value="001" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Serie</span>
-											<input class="form-control input-lg" type="text" name="serie" id="serie" placeholder="serie" value="001" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Serie</span>
+											<input class="form-control" type="text" name="serie" id="serie" placeholder="serie" value="001" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Número Factura</span>
-											<input class="form-control input-lg" type="text" name="facturano" id="facturano" placeholder="facturano" value="0" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Número Factura</span>
+											<input class="form-control" type="text" name="facturano" id="facturano" placeholder="facturano" value="0" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Nombre</span>
-											<input class="form-control input-lg" type="text" name="nombre" id="nombre" placeholder="Nombre" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Nombre</span>
+											<input class="form-control" type="text" name="nombre" id="nombre" placeholder="Nombre" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">RUC</span>
-											<input class="form-control input-lg" type="text" name="ruc" id="ruc" placeholder="0000000000000" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">RUC</span>
+											<input class="form-control" type="text" name="ruc" id="ruc" placeholder="0000000000000" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Logo</span>
-											<input class="form-control input-lg" type="text" name="logo" id="logo" placeholder="image.jpg" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Logo</span>
+											<input class="form-control" type="text" name="logo" id="logo" placeholder="image.jpg" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">E-mail</span>
-											<input class="form-control input-lg" type="text" name="email" id="email" placeholder="email@empresa.com" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">E-mail</span>
+											<input class="form-control" type="text" name="email" id="email" placeholder="email@empresa.com" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Fecha Contribuyente</span>
-											<input class="form-control input-lg" type="text" name="fecha" id="fecha" placeholder="23-01-2016" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Fecha Contribuyente</span>
+											<input class="form-control" type="text" name="fecha" id="fecha" placeholder="23-01-2016" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Texto Resolucion</span>
-											<input class="form-control input-lg" type="text" name="texto" id="texto" placeholder="texto" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Texto Resolucion</span>
+											<input class="form-control" type="text" name="texto" id="texto" placeholder="texto" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Doc Categorizado</span>
-											<input class="form-control input-lg" type="text" name="documento" id="documento" placeholder="Documento" value="" required="" autocomplete="off">
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Doc Categorizado</span>
+											<input class="form-control" type="text" name="documento" id="documento" placeholder="Documento" value="" required="" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="input-group" style="width: 100%;">
-											<span class="input-group-addon" id="sizing-addon4" style="width: 50%;">Unificar Dirección</span>
+											<span class="input-group-addon" id="sizing-addon4" style="width: 160px;">Unificar Dirección</span>
 											<input class="form-control" type="checkbox" name="unifica" id="unifica" placeholder="false " checked="unchecked" required="" autocomplete="off">
 										</div>
 									</div> 															
 								</div>														
 								<div id="maincontinuar" Align="center" style="width:100%; display:block;"> 
 									<div class="form-group">
-										<button type="button" class="btn btn-primary" id="btndatosfactura" onclick="ingresafacturaconfi(); return false;">Grabar</button>
+										<button type="button" class="btn btn-success btn-lg" id="btndatosfactura" onclick="ingresafacturaconfi(); return false;">Grabar</button>
 									</div>  
 								</div>									
 							</div>
