--- a/www/run.html
+++ b/www/run.html
@@ -212,7 +212,7 @@
 														<td style="text-align:center; vertical-align:middle;">
 															<div class="form-group">
 																<div class="input-group date">																
-																	<input type="text" id="fechadesde" name="fechadesde" class="form-control datepicker" placeholder="Desde " aria-describedby="sizing-addon2" />
+																	<input type="text" id="fechadesde" name="fechadesde" class="form-control datepicker" readonly placeholder="Desde " aria-describedby="sizing-addon2" />
 																	<span class="input-group-addon">
 																	<span class=" fa fa-calendar"></span>
 																	</span>
