--- a/www/login.html
+++ b/www/login.html
@@ -8,7 +8,13 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="cordova.js"></script>
 	</head>
-      <body style="background-color:#1970AA;">      
+      <body style="background-color:#1970AA;"> 
+			<div id="fadeCloud" style="display:none;width:100%;height:100%;position:absolute;left:0px;top:0px;background:rgba(255,255,255,0.7);z-index:90000;">
+				<div style="height:50%">&nbsp;</div>
+				<div  style="text-align:center;" >
+					<img src="img/loading.gif"  />
+				</div>
+			</div>
 	<br/>
 <div class="container-fluid">
 <div class="row" style="display:block;" id="fadeRow" >
@@ -63,7 +69,7 @@
 	function validateToken () {
 	var usuario=$("#user2").val();
 	var password=$("#pass2").val();
-
+	$("#fadeCloud").show();
 	
 	if (usuario=="" || password =="" ){
 	alert ("Ingrese el usuario y el password.");
@@ -76,6 +82,7 @@
   data: { user: usuario, pass: password,dedonde: "login" }
 })
   .done(function( msg ) {
+  $("#fadeCloud").hide();
     //alert( "Data Saved: " + msg );
 	if (msg=="no"){
 		alert ("El usuario o la contraseña están incorrectos. ");
