--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="css/jquery.mobile-1.4.2.min.js"></script>
 	<script type="text/javascript" src="css/bootstrap.min.js"></script>
 	<script type="text/javascript" src="cordova.js"></script>
+    <script src="js/pdv.js"></script>
 	
 	</head>
     <body style="background-color:#1970AA;">      
