login redir to run
login Redir josue

--- a/www/login.html
+++ b/www/login.html
@@ -62,6 +62,7 @@
 	</div>
 	<script>
 	var errNet='Problemas de conexión \n Por favor Verifica tu internet.';
+	if(localStorage.getItem('empresa')) window.top.location='run.html?id='+localStorage.getItem('empresa');
 	function nuevaCuenta () {
 	location.href="index.html"; 	
 	}
