--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <script>if(localStorage.getItem('empresa')) window.top.location='run.html?id='+localStorage.getItem('empresa');</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,7 +65,7 @@
       </div> <!--End row -->
 </div>
 	<script>
-	if(localStorage.getItem('empresa')) window.top.location='run.html?id='+localStorage.getItem('empresa');
+	
 	var errNet='Problemas de conexión \n Por favor Verifica tu internet.';
 	function mostrarSignIn () {
 	location.href="login.html"; 		
